Fixes spacing for the X in posts

--- a/themes/moigonz/assets/sass/style.scss
+++ b/themes/moigonz/assets/sass/style.scss
@@ -71,7 +71,7 @@ a {
 	&:before,
 	&:after {
 		position: absolute;
-		top: 25%;
+		top: 75px;
 		left: 50%;
 		width: 5%;
 		height: 1px;
@@ -105,7 +105,7 @@ a {
 
 				content: '';
 				position: absolute;
-				top: 75px;
+				top: 0;
 				left: 50%;
 				height: 1px;
 				background-color: lighten(#333, 50%);
